try fix flicker

--- a/css/index.css
+++ b/css/index.css
@@ -21,9 +21,8 @@
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    /*** patch for jquerymobile page flicker that was happending ***/
-    -webkit-backface-visibility: hidden; 
 }
+
 
 body {
     background-color:#E4E4E4;
@@ -113,4 +112,8 @@ h1 {
 .blink {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
+}
+
+.ui-page {
+    -webkit-backface-visibility: hidden;
 }
